// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled item 1`] = `
<button
  className="item"
  disabled={true}
  onClick={[Function]}
>
  <span
    className="icon fa fa-undefined"
  />
  <span
    className="title"
  />
</button>
`;

exports[`Render item 1`] = `
<button
  className="item"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="icon fa fa-undefined"
  />
  <span
    className="title"
  />
</button>
`;
